--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <title>Color Picker</title>
-<link rel="icon" href="sitefiles/icon.png" type="image/png">
 <style>
 body {
     font-family: sans-serif;
@@ -291,6 +290,14 @@ input[type="range"]::-moz-range-thumb {
 
 
 <script>
+  /**
+   * Color Picker Component
+   *
+   * This script implements a dynamic color picker with HSV, RGB, CMYK, and HSL color models.
+   * It allows users to select colors from a gradient, adjust alpha transparency, and copy color values to the clipboard.
+   */
+
+  // DOM element references
   const hueSlider = document.getElementById('hueSlider');
   const colorGradient = document.getElementById('colorGradient');
   const colorPreview = document.getElementById('colorPreview');
@@ -301,163 +308,47 @@ input[type="range"]::-moz-range-thumb {
   const hslValueDiv = document.getElementById('hsl-text');
   const alphaSlider = document.getElementById('alphaSlider');
 
-    const hexCopyIcon = document.getElementById('hexCopyIcon');
-    const rgbCopyIcon = document.getElementById('rgbCopyIcon');
-    const cmykCopyIcon = document.getElementById('cmykCopyIcon');
-    const hsvCopyIcon = document.getElementById('hsvCopyIcon');
-    const hslCopyIcon = document.getElementById('hslCopyIcon');
+  // Copy icon DOM element references
+  const hexCopyIcon = document.getElementById('hexCopyIcon');
+  const rgbCopyIcon = document.getElementById('rgbCopyIcon');
+  const cmykCopyIcon = document.getElementById('cmykCopyIcon');
+  const hsvCopyIcon = document.getElementById('hsvCopyIcon');
+  const hslCopyIcon = document.getElementById('hslCopyIcon');
 
-
+  // Color variables
   let hue = 0;
   let saturation = 100;
   let value = 100;
   let isDragging = false;
   let alpha = 1;
 
-    // SVG code for the copy icon
-    const copyIconSVG = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M19 7c0-1.1-.9-2-2-2h-4c0-1.66-1.34-3-3-3S7 3.34 7 5H3c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h4c0 1.66 1.34 3 3 3s3-1.34 3-3h4c1.1 0 2-.9 2-2V7zM3 7h4v10H3V7zm11 12c0 .55-.45 1-1 1s-1-.45-1-1H9c0 .55-.45 1-1 1s-1-.45-1-1V5c0-.55.45-1 1-1s1 .45 1 1h4c0-.55.45-1 1-1s1 .45 1 1v14zm2-12H7V7h10v8H17V7z"/></svg>`;
+  /**
+   * SVG code for the copy icon.
+   * @constant {string}
+   */
+  const copyIconSVG = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M19 7c0-1.1-.9-2-2-2h-4c0-1.66-1.34-3-3-3S7 3.34 7 5H3c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h4c0 1.66 1.34 3 3 3s3-1.34 3-3h4c1.1 0 2-.9 2-2V7zM3 7h4v10H3V7zm11 12c0 .55-.45 1-1 1s-1-.45-1-1H9c0 .55-.45 1-1 1s-1-.45-1-1V5c0-.55.45-1 1-1s1 .45 1 1h4c0-.55.45-1 1-1s1 .45 1 1v14zm2-12H7V7h10v8H17V7z"/></svg>`;
 
-    // Inject the SVG into the elements
-    hexCopyIcon.innerHTML = copyIconSVG;
-    rgbCopyIcon.innerHTML = copyIconSVG;
-    cmykCopyIcon.innerHTML = copyIconSVG;
-    hsvCopyIcon.innerHTML = copyIconSVG;
-    hslCopyIcon.innerHTML = copyIconSVG;
+  // Inject the SVG into the elements
+  hexCopyIcon.innerHTML = copyIconSVG;
+  rgbCopyIcon.innerHTML = copyIconSVG;
+  cmykCopyIcon.innerHTML = copyIconSVG;
+  hsvCopyIcon.innerHTML = copyIconSVG;
+  hslCopyIcon.innerHTML = copyIconSVG;
 
-
-  function updateColor() {
-    const h = hue;
-    const s = saturation / 100;
-    const v = value / 100;
-
-    let r, g, b;
-
-    const i = Math.floor(h / 60);
-    const f = h / 60 - i;
-    const p = v * (1 - s);
-    const q = v * (1 - s * f);
-    const t = v * (1 - s * (1 - f));
-
-    switch (i % 6) {
-      case 0: r = v; g = t; b = p; break;
-      case 1: r = q; g = v; b = p; break;
-      case 2: r = p; g = v; b = t; break;
-      case 3: r = p; g = q; b = v; break;
-      case 4: r = t; g = p; b = v; break;
-      case 5: r = v; g = p; b = q; break;
-    }
-
-    const red = Math.round(r * 255);
-    const green = Math.round(g * 255);
-    const blue = Math.round(b * 255);
-
-    const rgbColor = `rgba(${red}, ${green}, ${blue}, ${alpha.toFixed(2)})`;
-
-    const gradientColor = `hsl(${hue}, 100%, 50%)`;
-    colorGradient.style.background = `linear-gradient(to right, white, ${gradientColor})`;
-
-    colorPreview.style.backgroundColor = rgbColor;
-
-    const hexColor = rgbToHex(red, green, blue, alpha);
-    hexColorInput.value = hexColor;
-
-    // Update RGB with alpha
-    rgbValueDiv.textContent = `rgba(${red}, ${green}, ${blue}, ${alpha.toFixed(2)})`;
-
-    cmykValueDiv.textContent = calculateCMYK(red, green, blue);
-    hsvValueDiv.textContent = calculateHSV(red, green, blue);
-    hslValueDiv.textContent = calculateHSL(red, green, blue);
-
-  }
-
-
-    function rgbToHex(r, g, b, a = 1) {
-        r = Math.round(r);
-        g = Math.round(g);
-        b = Math.round(b);
-
-        const hexR = r.toString(16).padStart(2, '0');
-        const hexG = g.toString(16).padStart(2, '0');
-        const hexB = b.toString(16).padStart(2, '0');
-        const hexA = Math.round(a * 255).toString(16).padStart(2, '0');
-
-        return `#${hexR}${hexG}${hexB}${hexA}`;
-    }
-
-    function calculateCMYK(r, g, b) {
-        r /= 255;
-        g /= 255;
-        b /= 255;
-
-        const k = 1 - Math.max(r, g, b);
-        const c = (1 - r - k) / (1 - k) || 0;
-        const m = (1 - g - k) / (1 - k) || 0;
-        const y = (1 - b - k) / (1 - k) || 0;
-
-        return `${(c * 100).toFixed(0)}%, ${(m * 100).toFixed(0)}%, ${(y * 100).toFixed(0)}%, ${(k * 100).toFixed(0)}%`;
-    }
-
-    function calculateHSV(r, g, b) {
-        r /= 255;
-        g /= 255;
-        b /= 255;
-
-        const max = Math.max(r, g, b);
-        const min = Math.min(r, g, b);
-        const delta = max - min;
-
-        let h = 0;
-        if (delta !== 0) {
-            if (max === r) {
-                h = 60 * (((g - b) / delta) % 6);
-            } else if (max === g) {
-                h = 60 * (((b - r) / delta) + 2);
-            } else {
-                h = 60 * (((r - g) / delta) + 4);
-            }
-        }
-
-        const s = max === 0 ? 0 : delta / max;
-        const v = max;
-
-        return `${h.toFixed(0)}°, ${(s * 100).toFixed(0)}%, ${(v * 100).toFixed(0)}%`;
-    }
-
-
-    function calculateHSL(r, g, b) {
-        r /= 255;
-        g /= 255;
-        b /= 255;
-
-        const max = Math.max(r, g, b);
-        const min = Math.min(r, g, b);
-        const delta = max - min;
-
-        const l = (max + min) / 2;
-
-        let h = 0;
-        if (delta !== 0) {
-            if (max === r) {
-                h = 60 * (((g - b) / delta) % 6);
-            } else if (max === g) {
-                h = 60 * (((b - r) / delta) + 2);
-            } else {
-                h = 60 * (((r - g) / delta) + 4);
-            }
-        }
-
-        const s = delta === 0 ? 0 : delta / (1 - Math.abs(2 * l - 1));
-
-        return `${h.toFixed(0)}°, ${(s * 100).toFixed(0)}%, ${(l * 100).toFixed(0)}%`;
-    }
-
+  /**
+   * Updates the URL by appending or modifying a query parameter.
+   *
+   * @param {string} uri - The base URI.
+   * @param {string} key - The key of the query parameter.
+   * @param {string} value - The value of the query parameter.
+   * @returns {string} The updated URI.
+   */
   function updateURLParameter(uri, key, value) {
       // Remove existing parameter
       let re = new RegExp("([?&])" + key + "=.*?(&|$)", "i");
       let separator = uri.indexOf('?') !== -1 ? "&" : "?";
       uri = uri.replace(re, '$1');  // Remove the existing parameter
       uri = uri.replace(/(&)$/, '');  // Remove trailing & if it exists
-
 
       // Add the new parameter
       if (value) {
@@ -466,25 +357,18 @@ input[type="range"]::-moz-range-thumb {
       return uri;
   }
 
-
-    function copyHex() {
-        const colorValue = hexColorInput.value;
-        navigator.clipboard.writeText(colorValue);
-
-        let newURL = updateURLParameter(window.location.href, 'Color', colorValue);
-        window.history.pushState({path:newURL}, '', newURL);
-
-        const copyButton = document.querySelector('.copy-hex');
-        copyButton.textContent = 'Copied!';
-        setTimeout(() => {
-            copyButton.textContent = '';
-            hexCopyIcon.innerHTML = copyIconSVG;
-        }, 1500);
-    }
-
-  function copyColor(type) {
+  /**
+   * Copies the selected color to the clipboard and updates the URL.
+   *
+   * @param {string} colorFormat - The color format to copy ('hex', 'rgb', 'cmyk', 'hsv', 'hsl').
+   */
+  function copyColor(colorFormat) {
       let colorValue = "";
-      switch (type) {
+
+      switch (colorFormat) {
+          case 'hex':
+              colorValue = hexColorInput.value;
+              break;
           case 'rgb':
               colorValue = rgbValueDiv.textContent;
               break;
@@ -497,79 +381,273 @@ input[type="range"]::-moz-range-thumb {
           case 'hsl':
               colorValue = hslValueDiv.textContent;
               break;
+          default:
+              console.error("Invalid color format specified for copyColor:", colorFormat);
+              return;
       }
 
-      navigator.clipboard.writeText(colorValue);
+      navigator.clipboard.writeText(colorValue)
+          .then(() => {
+              // Update the URL and browser history
+              const newURL = updateURLParameter(window.location.href, 'Color', colorValue);
+              window.history.pushState({ path: newURL }, '', newURL);
 
-      let newURL = updateURLParameter(window.location.href, 'Color', colorValue);
-      window.history.pushState({path:newURL}, '', newURL);
+              // Provide visual feedback (e.g., change the copy icon briefly)
+              const copyButton = document.querySelector(`[onclick="copyColor('${colorFormat}')"]`);  // Select the correct button
+              copyButton.textContent = 'Copied!';
 
-      const copyButton = document.querySelector(`#${type}-value .copy-button`);
-      copyButton.textContent = 'Copied!';
-      setTimeout(() => {
-          copyButton.textContent = '';
-          document.getElementById(`${type}CopyIcon`).innerHTML = copyIconSVG;
-      }, 1500);
+              // Reset the copy icon after a short delay
+              setTimeout(() => {
+                  copyButton.textContent = '';
+                  document.getElementById(`${colorFormat}CopyIcon`).innerHTML = copyIconSVG;
+              }, 1500);
+          })
+          .catch(err => {
+              console.error('Failed to copy color: ', err);
+          });
   }
 
+    /**
+     * Copies the hex color to the clipboard and updates the URL.
+     */
+    function copyHex() {
+      copyColor('hex'); //Call copyColor with 'hex' argument.
+    }
 
+  /**
+   * Updates the color based on the current hue, saturation, value, and alpha.
+   */
+  function updateColor() {
+      const h = hue;
+      const s = saturation / 100;
+      const v = value / 100;
 
+      let r, g, b;
+
+      const i = Math.floor(h / 60);
+      const f = h / 60 - i;
+      const p = v * (1 - s);
+      const q = v * (1 - s * f);
+      const t = v * (1 - s * (1 - f));
+
+      switch (i % 6) {
+          case 0: r = v; g = t; b = p; break;
+          case 1: r = q; g = v; b = p; break;
+          case 2: r = p; g = v; b = t; break;
+          case 3: r = p; g = q; b = v; break;
+          case 4: r = t; g = p; b = v; break;
+          case 5: r = v; g = p; b = q; break;
+      }
+
+      const red = Math.round(r * 255);
+      const green = Math.round(g * 255);
+      const blue = Math.round(b * 255);
+
+      const rgbColor = `rgba(${red}, ${green}, ${blue}, ${alpha.toFixed(2)})`;
+
+      const gradientColor = `hsl(${hue}, 100%, 50%)`;
+      colorGradient.style.background = `linear-gradient(to right, white, ${gradientColor})`;
+
+      colorPreview.style.backgroundColor = rgbColor;
+
+      const hexColor = rgbToHex(red, green, blue, alpha);
+      hexColorInput.value = hexColor;
+
+      // Update RGB with alpha
+      rgbValueDiv.textContent = `rgba(${red}, ${green}, ${blue}, ${alpha.toFixed(2)})`;
+
+      cmykValueDiv.textContent = calculateCMYK(red, green, blue);
+      hsvValueDiv.textContent = calculateHSV(red, green, blue);
+      hslValueDiv.textContent = calculateHSL(red, green, blue);
+  }
+
+  /**
+   * Converts RGB values to a hex color code.
+   *
+   * @param {number} r - The red value (0-255).
+   * @param {number} g - The green value (0-255).
+   * @param {number} b - The blue value (0-255).
+   * @param {number} a - The alpha value (0-1).
+   * @returns {string} The hex color code (e.g., #RRGGBBAA).
+   */
+  function rgbToHex(r, g, b, a = 1) {
+      r = Math.round(r);
+      g = Math.round(g);
+      b = Math.round(b);
+
+      const hexR = r.toString(16).padStart(2, '0');
+      const hexG = g.toString(16).padStart(2, '0');
+      const hexB = b.toString(16).padStart(2, '0');
+      const hexA = Math.round(a * 255).toString(16).padStart(2, '0');
+
+      return `#${hexR}${hexG}${hexB}${hexA}`;
+  }
+
+  /**
+   * Calculates CMYK values from RGB values.
+   *
+   * @param {number} r - The red value (0-255).
+   * @param {number} g - The green value (0-255).
+   * @param {number} b - The blue value (0-255).
+   * @returns {string} The CMYK values (e.g., 0%, 100%, 100%, 0%).
+   */
+  function calculateCMYK(r, g, b) {
+      r /= 255;
+      g /= 255;
+      b /= 255;
+
+      const k = 1 - Math.max(r, g, b);
+      const c = (1 - r - k) / (1 - k) || 0;
+      const m = (1 - g - k) / (1 - k) || 0;
+      const y = (1 - b - k) / (1 - k) || 0;
+
+      return `${(c * 100).toFixed(0)}%, ${(m * 100).toFixed(0)}%, ${(y * 100).toFixed(0)}%, ${(k * 100).toFixed(0)}%`;
+  }
+
+  /**
+   * Calculates HSV values from RGB values.
+   *
+   * @param {number} r - The red value (0-255).
+   * @param {number} g - The green value (0-255).
+   * @param {number} b - The blue value (0-255).
+   * @returns {string} The HSV values (e.g., 0°, 100%, 100%).
+   */
+  function calculateHSV(r, g, b) {
+      r /= 255;
+      g /= 255;
+      b /= 255;
+
+      const max = Math.max(r, g, b);
+      const min = Math.min(r, g, b);
+      const delta = max - min;
+
+      let h = 0;
+      if (delta !== 0) {
+          if (max === r) {
+              h = 60 * (((g - b) / delta) % 6);
+          } else if (max === g) {
+              h = 60 * (((b - r) / delta) + 2);
+          } else {
+              h = 60 * (((r - g) / delta) + 4);
+          }
+      }
+
+      const s = max === 0 ? 0 : delta / max;
+      const v = max;
+
+      return `${h.toFixed(0)}°, ${(s * 100).toFixed(0)}%, ${(v * 100).toFixed(0)}%`;
+  }
+
+  /**
+   * Calculates HSL values from RGB values.
+   *
+   * @param {number} r - The red value (0-255).
+   * @param {number} g - The green value (0-255).
+   * @param {number} b - The blue value (0-255).
+   * @returns {string} The HSL values (e.g., 0°, 100%, 50%).
+   */
+  function calculateHSL(r, g, b) {
+      r /= 255;
+      g /= 255;
+      b /= 255;
+
+      const max = Math.max(r, g, b);
+      const min = Math.min(r, g, b);
+      const delta = max - min;
+
+      const l = (max + min) / 2;
+
+      let h = 0;
+      if (delta !== 0) {
+          if (max === r) {
+              h = 60 * (((g - b) / delta) % 6);
+          } else if (max === g) {
+              h = 60 * (((b - r) / delta) + 2);
+          } else {
+              h = 60 * (((r - g) / delta) + 4);
+          }
+      }
+
+      const s = delta === 0 ? 0 : delta / (1 - Math.abs(2 * l - 1));
+
+      return `${h.toFixed(0)}°, ${(s * 100).toFixed(0)}%, ${(l * 100).toFixed(0)}%`;
+  }
+
+  /**
+   * Event listener for the hue slider.
+   * Updates the hue value and triggers a color update.
+   */
   hueSlider.addEventListener('input', (e) => {
       hue = parseInt(e.target.value);
       updateColor();
   });
 
+  /**
+   * Event listener for the alpha slider.
+   * Updates the alpha value and triggers a color update.
+   */
   alphaSlider.addEventListener('input', (e) => {
       alpha = parseInt(e.target.value) / 100;
       updateColor();
   });
 
-
+  /**
+   * Event listeners for dragging functionality on the color gradient.
+   */
   colorGradient.addEventListener('mousedown', (e) => {
-    isDragging = true;
-    updateColorOnDrag(e);
+      isDragging = true;
+      updateColorOnDrag(e);
 
-    window.addEventListener('mousemove', handleMouseMove);
-    window.addEventListener('mouseup', handleMouseUp);
+      window.addEventListener('mousemove', handleMouseMove);
+      window.addEventListener('mouseup', handleMouseUp);
   });
 
-
+  /**
+   * Handles mousemove events during dragging.
+   * Updates the color based on the drag position.
+   */
   function handleMouseMove(e) {
-    if (isDragging) {
-        updateColorOnDrag(e);
-    }
+      if (isDragging) {
+          updateColorOnDrag(e);
+      }
   }
 
-
+  /**
+   * Handles mouseup events to stop dragging.
+   */
   function handleMouseUp() {
-    isDragging = false;
-    window.removeEventListener('mousemove', handleMouseMove);
-    window.removeEventListener('mouseup', handleMouseUp);
+      isDragging = false;
+      window.removeEventListener('mousemove', handleMouseMove);
+      window.removeEventListener('mouseup', handleMouseUp);
   }
 
+  /**
+   * Updates the color based on the mouse position during dragging.
+   * @param {MouseEvent} e - The mouse event.
+   */
   function updateColorOnDrag(e) {
-    const gradientWidth = colorGradient.offsetWidth;
-    const gradientHeight = colorGradient.offsetHeight;
-    const rect = colorGradient.getBoundingClientRect();
+      const gradientWidth = colorGradient.offsetWidth;
+      const gradientHeight = colorGradient.offsetHeight;
+      const rect = colorGradient.getBoundingClientRect();
 
-    let x = e.clientX - rect.left;
-    let y = e.clientY - rect.top;
+      let x = e.clientX - rect.left;
+      let y = e.clientY - rect.top;
 
-    x = Math.max(0, Math.min(x, gradientWidth));
-    y = Math.max(0, Math.min(y, gradientHeight));
+      x = Math.max(0, Math.min(x, gradientWidth));
+      y = Math.max(0, Math.min(y, gradientHeight));
 
-    saturation = (x / gradientWidth) * 100;
-    value = 100 - (y / gradientHeight) * 100;
+      saturation = (x / gradientWidth) * 100;
+      value = 100 - (y / gradientHeight) * 100;
 
-    colorPreview.style.left = `${x}px`;
-    colorPreview.style.top = `${y}px`;
-    colorPreview.style.transform = "translate(-50%, -50%)";
+      colorPreview.style.left = `${x}px`;
+      colorPreview.style.top = `${y}px`;
+      colorPreview.style.transform = "translate(-50%, -50%)";
 
-    updateColor();
+      updateColor();
   }
 
+  // Initial color update
   updateColor();
-
 
 </script>
 
